GNOME Bugzilla – Bug 781693
snippets do not work on a newly created empty file
Last modified: 2017-04-25 06:31:46 UTC
If you create a new file, you can't use any snippets until you save the file and Builder is able to detect what kind of source file it is. Not sure if this is the expected behavior.
It is worth noting that even selecting a specific language for syntax highlighting is not enough.
(In reply to Alexandre Franke from comment #1) > It is worth noting that even selecting a specific language for syntax > highlighting is not enough. Good to know that is the root of the issue. Also, adding a shebang should be enough to guess the language. Something like: #!/usr/bin/env python3
Created attachment 350367 [details] [review] sourceview: reload snippets when the buffer language changes
Attachment 350367 [details] pushed as 8de9b22 - sourceview: reload snippets when the buffer language changes