sourceview: reload snippets when the buffer language changes

https://bugzilla.gnome.org/show_bug.cgi?id=781693